Coarse code cleanup.
Initial work done:
* Added @Override annotations
* Made indentation consistent
* Cleaned imports